--- a/minesweeper.html
+++ b/minesweeper.html
@@ -19,4 +19,14 @@
 	<main></main>
 	<footer></footer>
 </body>
+<script>
+	if ('serviceWorker' in navigator){
+        navigator.serviceWorker.register('service-worker.js')
+        .then(function(){
+              console.log('service worker registered successfully');
+        });
+  	}else{
+        console.log("failed");
+  	}
+</script>
 </html>
